--- a/test/fixtures/user_skills.yml
+++ b/test/fixtures/user_skills.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
+  user: michael
   skill: one
   status: 1
 
 two:
-  user: two
+  user: archer
   skill: two
   status: 1
